<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_f5f5f5"
    tools:context=".ui.activity.user.ModifyPasswordActivity">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_50"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingStart="@dimen/padding_16"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_17"
            android:text="@string/modify_password"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_font_18" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_old_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_47"
        android:background="@color/white"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_17"
            android:text="@string/old_password"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_font_17" />

        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="@dimen/padding_200"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_71"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/please_input_old_password"
            android:textColorHint="@color/color_878787"
            android:textSize="@dimen/text_font_15" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_hint"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_47"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_old_password">

        <ImageView
            android:layout_width="@dimen/padding_15"
            android:layout_height="@dimen/padding_15"
            android:layout_marginStart="@dimen/padding_17"
            android:src="@drawable/icon_password_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_7"
            android:text="@string/password_hint"
            android:textColor="@color/color_878787"
            android:textSize="@dimen/text_font_15" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_new_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_47"
        android:background="@color/white"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_hint">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_17"
            android:text="@string/new_password"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_font_17" />

        <EditText
            android:id="@+id/et_new_password"
            android:layout_width="@dimen/padding_200"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_71"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/please_input_new_password"
            android:textColorHint="@color/color_878787"
            android:textSize="@dimen/text_font_15" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_47"
        android:layout_marginTop="@dimen/padding_1"
        android:background="@color/white"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/ll_new_password">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_17"
            android:text="@string/confirm_new_password"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_font_17" />

        <EditText
            android:id="@+id/et_confirm"
            android:layout_width="@dimen/padding_200"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding_36"
            android:background="@null"
            android:inputType="textPassword"
            android:hint="@string/please_confirm_new_password"
            android:textColorHint="@color/color_878787"
            android:textSize="@dimen/text_font_15" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_73"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginTop="@dimen/padding_30"
        android:layout_marginEnd="@dimen/padding_10"
        android:background="@drawable/icon_password_confirm"
        android:gravity="center"
        android:paddingBottom="@dimen/padding_8"
        android:text="@string/confirm_modify"
        android:textColor="@color/white"
        android:textSize="@dimen/text_font_19"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/ll_confirm_password" />

</androidx.constraintlayout.widget.ConstraintLayout>