<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.search.PeripheryActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_f5f5f5">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:gravity="center_vertical"
            android:layout_height="@dimen/padding_50"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:paddingStart="@dimen/padding_16"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_17"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_font_18"
                android:text="@string/find_periphery"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_distance"
            android:layout_width="match_parent"
            android:layout_height="@dimen/padding_50"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:layout_marginTop="@dimen/padding_1"
            app:layout_constraintTop_toBottomOf="@+id/ll_title"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_time_500"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/padding_33"
                    android:background="@drawable/bg_stroke_dedede_17"
                    android:gravity="center"
                    android:paddingStart="@dimen/padding_15"
                    android:paddingEnd="@dimen/padding_15"
                    android:layout_marginStart="@dimen/padding_14"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/text_font_16"
                    android:text="@string/five_m"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_time_1000"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/padding_33"
                    android:paddingStart="@dimen/padding_15"
                    android:paddingEnd="@dimen/padding_15"
                    android:background="@drawable/bg_stroke_256fe9_17"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/padding_9"
                    android:textColor="@color/color_256fe9"
                    android:textSize="@dimen/text_font_16"
                    android:text="@string/thousand"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/tv_time_2000"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/padding_33"
                    android:paddingStart="@dimen/padding_15"
                    android:paddingEnd="@dimen/padding_15"
                    android:background="@drawable/bg_stroke_dedede_17"
                    android:gravity="center"
                    android:layout_marginStart="@dimen/padding_9"
                    android:textColor="@color/color_666666"
                    android:textSize="@dimen/text_font_15"
                    android:text="@string/two_thousand"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/ll_time"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginTop="-6dp"
                android:layout_marginBottom="-6dp"
                android:layout_height="match_parent"
                android:background="@drawable/icon_periphery_line"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_time"
                    android:paddingStart="@dimen/padding_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_font_16"
                    android:textColor="@color/color_333333"
                    tools:text="2012年"/>


                <ImageView
                    android:layout_width="@dimen/padding_17"
                    android:layout_height="@dimen/padding_17"
                    android:scaleType="fitXY"
                    android:layout_marginStart="@dimen/padding_5"
                    android:src="@drawable/icon_select_time"/>

            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_land"
            android:layout_width="match_parent"
            android:layout_height="198dp"
            android:background="@color/white"
            android:paddingBottom="@dimen/padding_10"
            app:layout_constraintTop_toBottomOf="@+id/ll_distance" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1186dp"
            android:scaleType="fitXY"
            app:layout_constraintTop_toBottomOf="@+id/rv_land"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/icon_chart"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>