<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activity.DetailActivity">

    <LinearLayout
        android:id="@+id/ll_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_50"
        android:background="@color/white"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:paddingStart="@dimen/padding_16"
            android:scaleType="centerCrop"
            android:src="@drawable/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_17"
            android:text="@string/bus_detail"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_font_18" />

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rel_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_133"
        android:layout_marginStart="@dimen/padding_17"
        android:layout_marginEnd="@dimen/padding_17"
        android:background="@drawable/icon_detail_bg"
        android:layout_below="@+id/ll_title">


        <TextView
            android:id="@+id/tv_edit_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_27"
            android:layout_marginTop="@dimen/padding_14"
            android:layout_marginBottom="@dimen/padding_12"
            android:textColor="@color/white"
            android:textSize="@dimen/text_font_20"
            android:text="编号： 27-09" />

        <View
            android:id="@+id/view"
            android:layout_width="@dimen/padding_220"
            android:layout_height="@dimen/padding_0.5"
            android:layout_below="@+id/tv_edit_code"
            android:layout_marginStart="@dimen/padding_17"
            android:layout_marginBottom="@dimen/padding_12"
            android:background="@color/item_segmenting_line" />

        <ImageView
            android:layout_width="@dimen/padding_53"
            android:layout_height="@dimen/padding_53"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/padding_33"
            android:layout_marginEnd="@dimen/padding_25"
            android:scaleType="fitXY"
            android:src="@drawable/icon_detail" />

        <TextView
            android:id="@+id/tv_pro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_marginStart="@dimen/padding_27"
            android:text="@string/pro_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_font_16" />

        <TextView
            android:id="@+id/tv_pro_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_pro"
            android:layout_toRightOf="@+id/tv_pro"
            android:textColor="@color/white"
            android:textSize="@dimen/text_font_16"
            android:text="盛世地产商业大厦" />


        <TextView
            android:id="@+id/tv_chinese_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_pro"
            android:layout_marginStart="@dimen/padding_27"
            android:layout_marginTop="@dimen/padding_8"
            android:text="@string/approvals_code"
            android:textColor="@color/white"
            android:textSize="@dimen/text_font_16" />

        <TextView
            android:id="@+id/tv_approvals_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/tv_chinese_code"
            android:layout_toRightOf="@+id/tv_chinese_code"
            android:textColor="@color/white"
            android:textSize="@dimen/text_font_16"
            android:text="A986548213658" />

    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_16"
        android:paddingTop="@dimen/padding_9"
        android:background="@color/color_f5f5f5"
        android:layout_below="@+id/rel_bg"
        android:paddingBottom="@dimen/padding_10"
       />


</RelativeLayout>